src/objects/Channel_Pre_Qualification_Team__c.object
<CustomObject>
    <description>R5 - New Custom object - Channel Pre-Qualification Team</description>
    <fields>
        <fullName>Access__c</fullName>
        <description>R5 -Access</description>
        <label>Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read/Write</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>R5 - Copies BU from User.</description>
        <formula>LEFT(TEXT(User__r.Business_Unit_BU__c), 4)</formula>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Pre_Qualification__c</fullName>
        <label>Channel Pre-Qualification</label>
        <referenceTo>Channel_Qualifications__c</referenceTo>
        <relationshipName>Channel_Pre_Qualification_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Channel_Qualification_OwnerID__c</fullName>
        <formula>CASESAFEID( Channel_Pre_Qualification__r.OwnerId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Qualification OwnerID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Qualification_Status__c</fullName>
        <formula>IF (OR( ISPICKVAL( Channel_Pre_Qualification__r.Status__c , &apos;Obsolete&apos;), ISPICKVAL(Channel_Pre_Qualification__r.Status__c, &apos;Declined&apos;), 
ISPICKVAL(Channel_Pre_Qualification__r.Status__c, &apos;Completed&apos;) ), &apos;Closed&apos;, TEXT(Channel_Pre_Qualification__r.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Qualification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R5 - Copies Country from User.</description>
        <formula>User__r.Country</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <description>R5 - Team Role</description>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAM/SAM Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Qualifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_User_Check__c</fullName>
        <description>R5 Check the duplicate User in the Channel Pre-Qualification Team.</description>
        <label>Unique User Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Channel_Pre_Qualification_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Channel Partner Pre-Qualification Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Channel_Pre_Qualification__c</columns>
        <columns>User__c</columns>
        <columns>Team_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Team Member - {0000}</displayFormat>
        <label>Channel Pre-Qualification Team</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Partner Pre-Qualification Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Channel_PreQualification_Team_CloseCheck</fullName>
        <active>true</active>
        <description>R5 - If Channel Partner Pre Qualification  Status is Obsolete/Declined/Completed, then the user should not edit the Channel partner pre qualification team</description>
        <errorConditionFormula>OR( ISPICKVAL( Channel_Pre_Qualification__r.Status__c , &apos;Obsolete&apos;),  ISPICKVAL(Channel_Pre_Qualification__r.Status__c, &apos;Declined&apos;),
ISPICKVAL(Channel_Pre_Qualification__r.Status__c, &apos;Completed&apos;) )</errorConditionFormula>
        <errorMessage>You cannot save the changes - Channel Partner Pre Qualification is Closed</errorMessage>
    </validationRules>
</CustomObject>